--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://anshullaikar.github.io/cookies",
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@tailwindui/react": "^0.1.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
