--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "http://anshullaikar.github.io/cookies",
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@material-ui/core": "^4.11.4",
     "@tailwindui/react": "^0.1.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -12,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-inlinesvg": "^2.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
